<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context="com.doitua.doittest.activity.signup.SignUpActivity">

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/et_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="96dp"
        tools:src="@drawable/ic_profile" />


    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textWebEditText"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_send"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send" />

</android.support.constraint.ConstraintLayout>
